# visy_sorting_app_pkg

./: .rosinstall  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: action.yml
launch/: sorting_app.launch  system.launch  system.launch.autosave  system_debug.launch
msg/: GraspData.msg
scripts/: grasp_planner_node.py  pick_and_place_node.py  sorting_app_node.py
scripts/visy_sorting_app_pkg/: __init__.py  grasp_planner_node.py  pick_and_place_node.py  sorting_app_node.py  sorting_app_node.py.autosave
srv/: PickAndPlace.srv  StopSorting.srv
